<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PLI</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="welcome">Welcome to PLI-kley!</string>
    <string name="display_name">Please enter your display name.</string>
    <string name="change_name">Change Display Name</string>
    <string name="room_1">Room 1</string>
    <string name="room_2">Room 2</string>
    <string name="room_3">Room 3</string>
	<string name="login">Log in</string>
	<string name="rock">Rock</string>
	<string name="paper">Paper</string>
	<string name="scissors">Scissors</string>
	<string name="exit_room">Exit Room</string>
    
</resources>