<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome" />

    <Button
        android:id="@+id/room1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="98dp"
        android:onClick="clickRoom1"
        android:text="@string/room_1" />

    <Button
        android:id="@+id/room2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/room1"
        android:layout_marginTop="110dp"
        android:onClick="clickRoom2"
        android:text="@string/room_2" />

    <Button
        android:id="@+id/room3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/room2"
        android:layout_marginTop="78dp"
        android:onClick="clickRoom3"
        android:text="@string/room_3" />

    <Button
        android:id="@+id/changeName"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="clickChangeName"
        android:text="@string/change_name" />

</RelativeLayout>